Header e footer ajustados

--- a/style.css
+++ b/style.css
@@ -169,6 +169,7 @@
     display: flex;
     justify-content: center;
     flex-direction: row;
+    gap: 80px;
 }
 
 .footer-box {
@@ -181,15 +182,33 @@
 .footer-secao-1 {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
-    align-items: flex-start;
+    justify-content: flex-start;
+    align-items: start;
     width: 35%;
-    margin-right: 20px;
+    gap: 3em;
+}
+
+.footer-secao-1-superior {
+    display: flex;
+    gap: 0.7em;
+    align-items: center;
+
+}
+
+.logo-footer {
+    width: 2em;
+    height: 2em;
+}
+
+.h1-footer {
+    font-size: 2.2em;
 }
 
 .footer-paragrafo {
-    width: 307px;
+    width: 300px;
     height: 78px;
+    font-weight: 400;
+    line-height: 26px;
 }
 
 .h4-footer {
@@ -220,7 +239,7 @@
 .footer-secao-4 {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: flex-start;
     padding: 10px; 
     align-items: flex-start;
 }
