Paginas prontas + links de redirecionamento funcionando

--- a/style.css
+++ b/style.css
@@ -99,14 +99,20 @@
     text-align: center;
     display: flex;
     align-items: center;
+    
 }
 
+.bar a {
+    text-decoration: none; /* Remove o sublinhado */
+    color: inherit; /* Herda a cor do elemento pai (li) */
+}
 .bar li {
     margin: 0 15px;
     position: relative;
     color: var(--dark-gray-2);
     transition: color 0.3s ease;
     cursor: default;
+    
 }
 
 .bar li::after {
